@@ -36,6 +36,7 @@ OPENSEADRAGON CHANGELOG
     * New Viewport method for managing homeBounds as well as constraints: setHomeBounds
     * Viewport.open supports positioning config properties
     * For multi-image open, drawing isn't started until all tileSources have been opened
+    * You can specify a clip area for each image (only works on browsers that support the HTML5 canvas) (#594)
 * Margins option to push the home region in from the edges of the Viewer (#505)
 * Rect and Point toString() functions are now consistent: rounding values to nearest hundredth
 * Overlays appear in the DOM immediately on open or addOverlay (#507)
